--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,6 @@ body{
 .text-description-color{
     color: #FFF;
     font-size: 1rem;
-    width: 676px;
 }
 /* header section start */
 /* nav section style */
@@ -59,12 +58,16 @@ nav li a{
 .banner{
     background-image: url('../Images/Group\ 13\ \(1\)\ \(1\).png');
     background-repeat: no-repeat;
+    background-position: center;
+    padding-right: 135px;
+    padding-left: 135px;
     width: 1170px;
     height: 500px;
     text-align: center;
 }
 .travel{
     color: #FFF;
+    padding-top: 100px;
     font-size: 4rem;
     font-weight: 800;
 }
@@ -77,6 +80,9 @@ nav li a{
     height: 20px;
     width: 20px;
     padding-right: 10px;
+}
+.button{
+    padding: 60px;
 }
 .btn-primary, .btn-primary1{
     font-size: 1rem;
@@ -91,4 +97,19 @@ nav li a{
 .btn-primary1{
     background-color: #FF5400; 
     color: #FFF;
+}
+
+
+
+
+
+/* responsive media queries */
+/* mobile device */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 30px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
