--- a/styles/style.css
+++ b/styles/style.css
@@ -162,6 +162,7 @@ nav li a{
     cursor: pointer;
     border: 0;
 }
+/* destination section */
 .destination-title{
     color: #131318;
     font-size: 40px;
@@ -175,6 +176,12 @@ nav li a{
 #destnation-text{
 padding-bottom: 50px;
 }
+.grid-wrapper{
+    display: grid;
+    grid-gap: 10px;
+    box-sizing: border-box;
+    background-color: #FFF;
+
 
 
 
@@ -214,7 +221,13 @@ background: rgba(19, 19, 24, 0.05);
 .footer-icon{
     max-width: 100px;
     text-align: center;
-    margin: 0 auto;   
+    margin: 0 auto;
+    padding-top: 33px 0px;   
+}
+.copy-rights{
+    color: #131318;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 
